--- a/css/NavBar.css
+++ b/css/NavBar.css
@@ -1,6 +1,6 @@
 body {
-  margin: 0px 15px;
-  padding-top: 90px;
+  margin: 50px 15px;
+  padding-top: 100px;
   background-color: #FFFFFF;
 }
 /*@media(min-width: 900px) {
@@ -99,14 +99,14 @@ body {
 .dropdown-menu {
   text-align: left;
   position: fixed !important;
-  top: 70pxpx !important;
+  top: 70px !important;
   left: 0 !important;
   right: 0 !important;
   width: 100% !important;
   max-width: none !important;
   margin: 0 !important;
   margin-top: 90px;
-  padding: 80px 120px !important;
+  padding: 85px 120px !important;
   box-sizing: border-box !important;
   background: white !important;
   z-index: 99999 !important;
@@ -167,7 +167,7 @@ body {
 /* DROPDOWN TEXT STYLES */
 .dropdown-menu h1 {
   font-size: 20px;
-  font-weight: 800;
+  font-weight:6800;
   color: #1a1a1a;
   margin-bottom: 8px;
 }
