--- a/css/NavBar.css
+++ b/css/NavBar.css
@@ -1,11 +1,10 @@
-body {
-  margin: 50px 15px;
-  padding-top: 100px;
+/*body {
+  padding-top: 160px;
   background-color: #FFFFFF;
 }
-/*@media(min-width: 900px) {
+@media(max-width: 900px) {
   body {
-    padding-top: 140px;
+    padding-top: 200px;
   }
 }*/
 
@@ -14,7 +13,6 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  text-align: left;
   padding: 0px 20px;
   position: fixed;
   right: 0;
